# pr02-daa-maquina-RAM

./: .gitignore  CMakeLists.txt  README.md
include/: cinta_entrada.h  cinta_salida.h  instruccion.h  maquina-ram.h  memoria_datos.h  memoria_instrucciones.h  operador.h  operandodirecto.h  operandoindexado.h  operandoindirecto.h  operandoinmediato.h
ram-machine-simulator/: CMakeLists.txt
ram-machine-simulator/doc/: Cambios-Alberto.txt  Cambios-PARSER.txt  Cambios-a-realizar.txt
ram-machine-simulator/include/: cinta.h  input_unit.h  instruccion.h  maquina-ram.h  memoria_datos.h  memoria_instrucciones.h  memoria_programa.h  operador.h  operandodirecto.h  operandoindexado.h  operandoindirecto.h  operandoinmediato.h  output_unit.h  parser.h  utilidades.h
ram-machine-simulator/include/instrucciones/: instruccion_alu.h  instruccion_control.h  instruccion_io.h  instruccion_memoria.h  instruccion_sistema.h
ram-machine-simulator/logs/: error.logs
ram-machine-simulator/src/: cinta.cc  input_unit.cc  main.cc  main_p.cc  maquina-ram.cc  memoria_datos.cc  memoria_instrucciones.cc  memoria_programa.cc  operandodirecto.cc  operandoindexado.cc  operandoindirecto.cc  operandoinmediato.cc  output_unit.cc  parser.cc  utilidades.cc
ram-machine-simulator/src/instrucciones/: instruccion_alu.cc  instruccion_control.cc  instruccion_io.cc  instruccion_memoria.cc  instruccion_sistema.cc
ram-machine-simulator/test/: bubblesort.ram  cinta_salida.txt  cinta_test.txt  inserccion.ram  sort_entrada_medium.txt  sort_entrada_small.txt  testMOD.ram
ram-machine-simulator/test/cintas_analisis/: average10.txt  average100.txt  average20.txt  average25.txt  average5.txt  average50.txt  best25.txt  worst20.txt  worst25.txt
src/: cinta_entrada.cc  cinta_salida.cc  main.cc  memoria_datos.cc  memoria_instrucciones.cc  operador.cc  operandodirecto.cc  operandoindexado.cc  operandoindirecto.cc  operandoinmediato.cc  utilidades.cc
